--- a/src/main.tex
+++ b/src/main.tex
@@ -20,13 +20,13 @@
 	\newpage
 }
 
-\section{Première partie}
+% \section{Première partie}
 \inputqora{1}
 \input{src/questions/q2}
 % ... add more questions as needed
 
 \newpage
-\section{Deuxème partie}
+% \section{Deuxème partie}
 \inputqora{3}
 % ... add more answers as needed
 
