--- a/src/questions/q1.tex
+++ b/src/questions/q1.tex
@@ -1,5 +1,5 @@
 % Content of the question, e.g.,
-\question
+\question[2]
 This is an open question with configurable witespace under it.
 Witespace will be replace by the answer if defined with the following command line.
 
