--- a/src/evaltemplate.sty
+++ b/src/evaltemplate.sty
@@ -138,36 +138,63 @@
 \newcommand{\corrbf}[2]{\ifcorrelse{\textcolor{red}{\textbf{#1}}}{#2}}
 \newcommand{\corrblock}[2]{\ifcorrelse{{\setstretch{1} \color{red}#1}}{#2}}
 
+\ifnotcorr{
+	%\AtEndDocument{\cleardoublepage}
+	\AtEndDocument{% based in \cleardoublepage
+		\clearpage
+		\ifodd\value{page}\else
+			\thispagestyle{empty}%
+			\hbox{}\newpage
+		\fi
+	}
+}
 
 \newcounter{qcnt}
 % \newcommand{\question}{\par\noindent\refstepcounter{qcnt}
 % 	\par\large\underline{\textbf{Question \arabic{qcnt}:}}\normalsize\par\noindent}
 
 % Define the \question command
-\newcommand{\question}{%
+% \newcommand{\question}{%
+% 	\stepcounter{qcnt}%
+% 	\begin{tcolorbox}[
+% 			colback=gray!60,     % Background color
+% 			colframe=gray!60,    % Frame color
+% 			width=\textwidth,    % Full text width
+% 			arc=5mm,             % Rounded corners
+% 			auto outer arc,      % Auto adjust arc size
+% 			left=5mm,            % Inner left padding
+% 			right=5mm,           % Inner right padding
+% 			boxrule=0.5mm,       % Frame thickness
+% 		]
+% 		% "Question x" on the left
+% 		\Large{\textcolor{white}{\textbf{Question \arabic{qcnt}}}}%
+% 		\hfill
+% 		% White box on the right with no border
+% 		% Adjust spacing as desired for size
+% 		\colorbox{white}{\hspace*{1em}\vphantom{X}\hspace*{1em}}
+% 	\end{tcolorbox}
+% 	% \vspace{1em} % Add vertical spacing after the box
+% 	\normalsize\par\noindent
+% }
+
+\newcommand{\question}[1][]{%
 	\stepcounter{qcnt}%
-	\begin{tcolorbox}[
-			colback=gray!60,     % Background color
-			colframe=gray!60,    % Frame color
+	\begin{tcolorbox}[%
 			width=\textwidth,    % Full text width
-			arc=5mm,             % Rounded corners
-			auto outer arc,      % Auto adjust arc size
-			left=5mm,            % Inner left padding
-			right=5mm,           % Inner right padding
 			boxrule=0.5mm,       % Frame thickness
 		]
 		% "Question x" on the left
-		\Large{\textcolor{white}{\textbf{Question \arabic{qcnt}}}}%
+		\Large{\textbf{Question \arabic{qcnt}}}%
 		\hfill
 		% White box on the right with no border
-		% Adjust spacing as desired for size
-		\colorbox{white}{\hspace*{1em}\vphantom{X}\hspace*{1em}}
-	\end{tcolorbox}
-	% \vspace{1em} % Add vertical spacing after the box
+		\colorbox{white}{\hspace*{1em}\vphantom{X}\hspace*{1em}}%
+		% Only print score if an argument is provided
+		\ifthenelse{\equal{#1}{}}{}{%
+			\small{\,/#1}%
+		}%
+	\end{tcolorbox}%
 	\normalsize\par\noindent
 }
-
-
 
 \newcommand{\inlineanswer}[1]{
 	\ifdefined\withanswers
@@ -206,10 +233,10 @@
 		@{}
 		}
 		\multirow{2}{*}{\includegraphics[width=0.27\textwidth]{src/images/logo.jpg}} &
-		Prénom :                                                                     & \hspace{1em}\underline{\hspace{0.15\textwidth}} &
-		Nom :                                                                        & \hspace{1em}\underline{\hspace{0.15\textwidth}}                                                     \\
-		                                                                             & Classe :                                        & \hspace{1em}\underline{\hspace{0.15\textwidth}} &
-		Date :                                                                       & \hspace{1em}\underline{\hspace{0.15\textwidth}}                                                     \\
+		Prénom :                                                                     & \dotfill &
+		Nom :                                                                        & \dotfill              \\
+		                                                                             & Classe : & \dotfill &
+		Date :                                                                       & \dotfill              \\
 	\end{tabular}
 
 	\renewcommand{\arraystretch}{1}
@@ -224,6 +251,8 @@
 \newcommand{\drawline}{%
 	\noindent \hrulefill
 }
+
+\newcommand{\ddotfill}[1][3cm]{\makebox[#1]{\dotfill}}
 
 % usage : \dotedline{10cm}
 \newcommand{\dotedline}[1]{\makebox[#1]{\dotfill}}
@@ -247,6 +276,11 @@
 }
 
 
-\newcommand{\checkboxEmpty}{$\square$} % Define an empty checkbox symbol
+% \newcommand{\checkboxEmpty}{$\square$} % Define an empty checkbox symbol
+\newcommand{\checkboxEmpty}{%
+	\tikz{
+		\draw[thick] (0,0) rectangle (0.3cm,0.3cm);
+	}%
+}
 \newcommand{\checkboxChecked}{$\checkmark$} % Define a checked checkbox symbol
 
