[enh] simplify question creqtion

--- a/src/questions/qx.tex
+++ b/src/questions/qx.tex
@@ -1,6 +1,1 @@
-% Content of the question, e.g.,
-\question% Optional blank to answer
-This is a question.
-\answerblank{3cm} % you can adjust "3cm" to whatever length you prefer for this specific question
-
-% add the answer with \inlineanswer{ax}
+\ifeabs{\question[4]}{\question[6]}
