[add] automated counters

--- a/src/config.tex
+++ b/src/config.tex
@@ -6,16 +6,7 @@
 \newcommand{\doctitle}{Évaluation journal de bord n$^{\circ}$\EvalCnt}
 \newcommand{\shortitle}{EvalJDB\EvalCnt}
 \newcommand{\docsubtitle}{Chapitre X - Titre du chapitre}
-\newcommand{\course}{Mathématiques}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Counters
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcounter{qcntvalue}
-\setcounter{qcntvalue}{5}
-\newcommand{\Total}{18} % total des points/pages
-\newcommand{\HalfTotal}{\inteval{\Total/2}} % calcul automatique de la moitié
+\newcommand{\course}{Mathématiques - 2C}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Objectives
