--- a/src/questions/q3.tex
+++ b/src/questions/q3.tex
@@ -1,5 +1,5 @@
 % Content of the question, e.g.,
-\question% Optional blank to answer
+\question[4]
 This is a question.
 \answerblank{3cm} % you can adjust "3cm" to whatever length you prefer for this specific question
 
