[add] crit to base

--- a/src/main.tex
+++ b/src/main.tex
@@ -13,7 +13,7 @@
 	% Display the title and subtitle
 	\titlebox{\doctitle}{\docsubtitle}
 
-	\input{src/crit.tex}
+	\input{base/crit.tex}
 	\newpage
 }
 
